--- a/app/views/admin/orders/index.html.erb
+++ b/app/views/admin/orders/index.html.erb
@@ -8,16 +8,20 @@
       <th>注文個数</th>
       <th>注文ステータス</th>
     </thead>
+    <% @orders.each do |order| %>
     <tbody>
-      <% @orders.each do |order| %>
       <td><%= l order.created_at,format: :long %></td>
       <% order.order_details.each do |order_details| %>
         <% @total_amount +=(order_details.amount) %>
       <% end %>
       <td><%= @total_amount %></td>
       <td><%= order.status_i18n %></td>
-      <% end %>
     </tbody>
+    <% end %>
   </table>
-    </div>
+    <!--</div>-->
+      <div class ="row mt-5 d-flex justify-content-center">
+    <!--↓ページネーションを表示させるための記述。詳細設定は、app/view/kaminariを参照-->
+    <%= paginate @orders %>
+  </div>
 </div>
