--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,7 +12,7 @@
 
   <body>
     <header>
-      <nav class = "nabver navber-expand-lg navbar-dark bg-dark">
+      <nav class = "navbar navbar-expand-lg navbar-dark bg-dark">
         <div class = "container">
           <%= link_to new_admin_session_path, class:'navbar-brand p-1' do %>
             <i class = 'fas fa-store'></i>
