--- a/app/views/admin/customers/edit.html.erb
+++ b/app/views/admin/customers/edit.html.erb
@@ -1,5 +1,5 @@
 <p id = "notice"></p>
-<div class = "container" style="margin">
+<div class = "container" style="margin:20px">
   <div class = "row mx-auto">
     <!--会員編集ページのタイトル-->
     <h5 class = "bg-light"><%= @customerf.full_name %>さんの会員情報編集</h5>
