--- a/app/views/admin/items/edit.html.erb
+++ b/app/views/admin/items/edit.html.erb
@@ -1,40 +1,40 @@
 <p id = "notice"></p>
-<div class = "container mx-auto" style="margin:30px">
-  <div class = "row" style="margin:20px">
-    <h5 class ="bg-light text-left">商品編集</h5>
+<div class = "container mx-auto" style="margin:20px">
+  <div class = "row mt-5 d-flex" style="margin:20px">
+    <h5 class ="bg-light">商品編集</h5>
   </div>
   <div class = "row">
     <div class = "col-sm-12 col-md-8 col-lg-5 px-5 px-sm-0 mx-auto">
-      <table class="table table-borderless" style="-ms-writing-mode: tb-lr;writing-mode: vertical-lr;">
-        <thead>
-          <th style="-ms-writing-mode : lr-tb; writing-mode : horizontal-tb; white-space : nowrap;">商品画像</th>
-          <th style="-ms-writing-mode : lr-tb; writing-mode : horizontal-tb; white-space : nowrap;">商品名</th>
-          <th style="-ms-writing-mode : lr-tb; writing-mode : horizontal-tb; white-space : nowrap;">商品説明</th>
-          <th style="-ms-writing-mode : lr-tb; writing-mode : horizontal-tb; white-space : nowrap;">ジャンル</th>
-          <th style="-ms-writing-mode : lr-tb; writing-mode : horizontal-tb; white-space : nowrap;">税抜価格</th>
-          <th style="-ms-writing-mode : lr-tb; writing-mode : horizontal-tb; white-space : nowrap;">販売ステータス</th>
-        </thead>
-        <tbody>
-          <%= form_with model: @itemf,url:admin_item_path(@itemf),local:true do |f| %>
-          <td style="-ms-writing-mode : lr-tb; writing-mode : horizontal-tb; white-space : nowrap;"><%= f.file_field :image, accept: "image/*" %></td>
-          <td style="-ms-writing-mode : lr-tb; writing-mode : horizontal-tb; white-space : nowrap;"><%= f.text_field :name,placeholder: "商品名",size: "35" %></td>
-          <td style="-ms-writing-mode : lr-tb; writing-mode : horizontal-tb; white-space : nowrap;"><%= f.text_area :introduction,placeholder: "ここに説明文を記述します" , :cols =>35, :rows =>5 %></td>
-          <td style="-ms-writing-mode : lr-tb; writing-mode : horizontal-tb; white-space : nowrap;"><%= f.select :genre_id, [["ケーキ",1], ["プリン",2], ["焼き菓子",3], ["キャンディ",4]], include_blank: "-----------選択してください-----------" %></td>
-          <td style="-ms-writing-mode : lr-tb; writing-mode : horizontal-tb; white-space : nowrap;"><%= f.text_field :price,placeholder: "1000",size: "35" %> 円</td>
-          <td style="-ms-writing-mode : lr-tb; writing-mode : horizontal-tb; white-space : nowrap;">
-            <!--ラジオボタンで「販売中」「販売停止中」を選べるようにする-->
-            <%= f.radio_button :is_active, :false, checked: true %>
-            <%= f.label :is_active, "販売中", {value: :false, style:"display: inline-block"} %>
-            &emsp;&emsp;
-            <%= f.radio_button :is_active, :true %>
-            <%= f.label :is_active, "販売停止中", {value: :true, style:"display: inline-block"} %>
-          </td>
-        </tbody>
-      </table>
+      <%= form_with model: @itemf,url:admin_item_path(@itemf),local:true do |f| %>
+        <table class="table table-borderless" style="-ms-writing-mode: tb-lr;writing-mode: vertical-lr;">
+          <thead>
+            <th style="-ms-writing-mode : lr-tb; writing-mode : horizontal-tb; white-space : nowrap;">商品画像</th>
+            <th style="-ms-writing-mode : lr-tb; writing-mode : horizontal-tb; white-space : nowrap;">商品名</th>
+            <th style="-ms-writing-mode : lr-tb; writing-mode : horizontal-tb; white-space : nowrap;">商品説明</th>
+            <th style="-ms-writing-mode : lr-tb; writing-mode : horizontal-tb; white-space : nowrap;">ジャンル</th>
+            <th style="-ms-writing-mode : lr-tb; writing-mode : horizontal-tb; white-space : nowrap;">税抜価格</th>
+            <th style="-ms-writing-mode : lr-tb; writing-mode : horizontal-tb; white-space : nowrap;">販売ステータス</th>
+          </thead>
+          <tbody>
+            <td style="-ms-writing-mode : lr-tb; writing-mode : horizontal-tb; white-space : nowrap;"><%= f.file_field :image, accept: "image/*" %></td>
+            <td style="-ms-writing-mode : lr-tb; writing-mode : horizontal-tb; white-space : nowrap;"><%= f.text_field :name,placeholder: "商品名",size: "35" %></td>
+            <td style="-ms-writing-mode : lr-tb; writing-mode : horizontal-tb; white-space : nowrap;"><%= f.text_area :introduction,placeholder: "ここに説明文を記述します" , :cols =>35, :rows =>5 %></td>
+            <td style="-ms-writing-mode : lr-tb; writing-mode : horizontal-tb; white-space : nowrap;"><%= f.select :genre_id, [["ケーキ",1], ["プリン",2], ["焼き菓子",3], ["キャンディ",4]], include_blank: "-----------選択してください-----------" %></td>
+            <td style="-ms-writing-mode : lr-tb; writing-mode : horizontal-tb; white-space : nowrap;"><%= f.text_field :price,placeholder: "1000",size: "35" %> 円</td>
+            <td style="-ms-writing-mode : lr-tb; writing-mode : horizontal-tb; white-space : nowrap;">
+              <!--ラジオボタンで「販売中」「販売停止中」を選べるようにする-->
+              <%= f.radio_button :is_active, :false, checked: true %>
+              <%= f.label :is_active, "販売中", {value: :false, style:"display: inline-block"} %>
+              &emsp;&emsp;
+              <%= f.radio_button :is_active, :true %>
+              <%= f.label :is_active, "販売停止中", {value: :true, style:"display: inline-block"} %>
+            </td>
+          </tbody>
+        </table>
+        <div class ="row mt-5 d-flex justify-content-center">
+          <%= f.submit "変更を保存", class: 'btn btn-success' %>
+        </div>
+      <% end %>
     </div>
   </div>
-  <div class ="row mt-5 d-flex justify-content-center">
-    <%= f.submit "変更を保存", class: 'btn btn-success' %>
-  </div>
-  <% end %>
 </div>
