--- a/app/views/admin/homes/top.html.erb
+++ b/app/views/admin/homes/top.html.erb
@@ -9,11 +9,10 @@
                     <th>注文個数</th>
                     <th>注文ステータス</th>
                     <!--colspan:th/td要素で、この属性を指定したセルから指定された数だけ右方向にセル結合して、1つのセルとして表示する-->
-                    <!--<th colspan = "4"></th>-->
                 </tr>
             </thead>
             <tbody>
-                <!--<% @orders.each do |order| %>-->
+                <% @orders.each do |order| %>
                     <tr>
                         <td>
                             <!--購入日時を押下することで、注文履歴詳細（更新）画面へ遷移させる-->
@@ -33,7 +32,7 @@
                         <td><%= @total_amount %></td>
                         <td><%= order.status_i18n %></td>
                     </tr>
-                <!--<% end %>-->
+                <% end %>
             </tbody>
         </table>
     </div>
