--- a/app/views/admin/items/new.html.erb
+++ b/app/views/admin/items/new.html.erb
@@ -25,7 +25,7 @@
                         <th style="-ms-writing-mode : lr-tb; writing-mode : horizontal-tb; white-space : nowrap;">税抜価格</th>
                         <th style="-ms-writing-mode : lr-tb; writing-mode : horizontal-tb; white-space : nowrap;">販売ステータス</th>
                     </thead>
-                    <tbody class="col">
+                    <tbody class="col-9">
                         <td style="-ms-writing-mode : lr-tb; writing-mode : horizontal-tb; white-space : nowrap;"><%= f.file_field :image, accept: "image/*" %></td>
                         <td style="-ms-writing-mode : lr-tb; writing-mode : horizontal-tb; white-space : nowrap;"><%= f.text_field :name,placeholder: "商品名" ,size: "35" %></td>
                         <!--cols =>:横サイズ指定、rows =>：縦サイズ指定-->
