--- a/app/views/public/homes/about.html.erb
+++ b/app/views/public/homes/about.html.erb
@@ -1,7 +1,8 @@
-<div class = "container mx-auto" style="margin-top:30px">
-  <div class = "row mx-auto text-align:center" style="margin:60px">
-    <!--<div class ="col-8 mx-auto">-->
-      <h1 style="font-size:100px"><storong>About</storong></h1>
+<div class = "container text-center" style="margin-top:30px">
+  <div class = "row" style="margin:60px">
+    <div class ="col-8 mx-auto">
+      <h1 class="text-center" style="font-size:100px"><storong>About</storong></h1>
+    </div>
   </div>
   <div class="row mx-auto" style="margin-top:20px">
       <span style="font-size:30px">
