--- a/app/views/admin/orders/show.html.erb
+++ b/app/views/admin/orders/show.html.erb
@@ -1,10 +1,10 @@
 <div class="container" style="margin:30px">
   <div class="row">
-    <h5 class="col-3 bg-light">注文履歴詳細</h5>
+    <h5 class="col-2 bg-light text-center">注文履歴詳細</h5>
   </div>
   <div class="row" style="margin-top:20px">
     <table class="table table-borderless" style="-ms-writing-mode: tb-lr;writing-mode: vertical-lr;">
-      <thead class="bg-light">
+      <thead>
         <th style="-ms-writing-mode : lr-tb; writing-mode : horizontal-tb; white-space : nowrap;">購入者</th>
         <th style="-ms-writing-mode : lr-tb; writing-mode : horizontal-tb; white-space : nowrap;">注文日</th>
         <th style="-ms-writing-mode : lr-tb; writing-mode : horizontal-tb; white-space : nowrap;">配送先</th>
@@ -22,7 +22,7 @@
         <td style="-ms-writing-mode : lr-tb; writing-mode : horizontal-tb; white-space : nowrap;"><%= @order.payment_method_i18n %></td>
         <td style="-ms-writing-mode : lr-tb; writing-mode : horizontal-tb; white-space : nowrap;">
           <%= form_with model: @order,url:admin_order_path(@order),local:true,method: :patch do |f| %>
-            <%= f.select :status, Order.statuses_i18n.invert, {prompt: false},class:"form-control-sm col-3" %>
+            <%= f.select :status, Order.statuses_i18n.invert, {prompt: false},class:"form-control-sm col-2" %>
             <%= f.submit "更新", class:'btn btn-sm btn-success' %>
           <% end %>
         </td>
