--- a/app/views/admin/customers/show.html.erb
+++ b/app/views/admin/customers/show.html.erb
@@ -1,6 +1,6 @@
 <div class="container" style="margin:30px">
   <div class="row mx-auto" style="margin:30px">
-    <h5 class="col-3 bg-light"><%= @customerf.full_name %>さんの会員詳細</h5>
+    <h5 class="col-sm-12 col-md-8 col-lg-5 px-5 px-sm-0 mx-auto  bg-light"><%= @customerf.full_name %>さんの会員詳細</h5>
   </div>
   <div class="row">
     <div class = "col-sm-12 col-md-8 col-lg-5 px-5 px-sm-0 mx-auto">
