--- a/app/views/admin/customers/edit.html.erb
+++ b/app/views/admin/customers/edit.html.erb
@@ -2,7 +2,7 @@
 <div class = "container" style="margin:20px">
   <div class = "row mx-auto">
     <!--会員編集ページのタイトル-->
-    <h5 class = "bg-light"><%= @customerf.full_name %>さんの会員情報編集</h5>
+    <h5 class = "col-sm-12 col-md-8 col-lg-5 px-5 px-sm-0 mx-auto bg-light"><%= @customerf.full_name %>さんの会員情報編集</h5>
   </div>
   <!--会員編集画面の詳細-->
   <div class = "row">
