--- a/app/views/public/customers/edit.html.erb
+++ b/app/views/public/customers/edit.html.erb
@@ -1,41 +1,52 @@
 <p id = "notice"></p>
-<div class ="container" style="margin-top:30px">
-  <div class ="row">
-    <h5 class ="bg-light">会員情報編集</h5>
+<div class="container" style="margin :20px">
+  <div class="row">
+    <h5 class="col-sm-12 col-md-8 col-lg-5 px-5 px-sm-0 mx-auto bg-light">会員情報編集</h5>
   </div>
-  <div class ="row">
-    <%= form_with model: @customerf,url:public_customers_path(@customerf),local:true do |f| %>
-      <div>
-        <%= f.label      :full_name,"氏名" %>
-        <%= f.text_field :last_name ,placeholder: "姓" %>
-        <%= f.text_field :first_name,placeholder: "名" %>
-      </div>
-      <div>
-        <%= f.label :full_name_kana,"フリガナ" %>
-        <%= f.text_field :last_name_kana,placeholder: "セイ" %>
-        <%= f.text_field :first_name_kana,placeholder: "メイ"%>
-      </div>
-      <div>
-        <%= f.label :postal_code,"郵便番号" %>
-        <%= f.text_field :postal_code,placeholder: "郵便番号" %>
-      </div>
-      <div>
-        <%= f.label :address,"住所" %>
-        <!--:size=>"〇〇"でtext_fieldの大きさを調整している-->
-        <%= f.text_field :address,placeholder: "住所", :size=>"50" %>
-      </div>
-      <div>
-        <%= f.label :telephone_number,"電話番号" %>
-        <%= f.text_field :telephone_number,placeholder: "電話番号" %>
-      </div>
-      <div>
-        <%= f.label :email,"メールアドレス" %>
-        <%= f.text_field :email,placeholder: "メールアドレス", :size=>"30" %>
-      </div>
-      <div class ="col-md">
-        <%= f.submit "編集内容を保存",class:'btn btn-success' %>
-        <%= link_to "退会する",public_unsubscribe_path,class:'btn btn-md btn-danger' %>
-      </div>
-    <% end %>
+  <div class="row">
+    <div class = "col-sm-12 col-md-8 col-lg-5 px-5 px-sm-0 mx-auto">
+      <%= form_with model: @customerf,url:public_customers_path(@customerf),local:true do |f| %>
+        <table class="table table-borderless" style="-ms-writing-mode: tb-lr;writing-mode: vertical-lr;">
+          <thead class="col-3">
+            <th style="-ms-writing-mode : lr-tb; writing-mode : horizontal-tb; white-space : nowrap;"><%= f.label:full_name,"氏名" %></th>
+            <th style="-ms-writing-mode : lr-tb; writing-mode : horizontal-tb; white-space : nowrap;"><%= f.label :full_name_kana,"フリガナ" %></th>
+            <th style="-ms-writing-mode : lr-tb; writing-mode : horizontal-tb; white-space : nowrap;"><%= f.label :postal_code,"郵便番号" %></th>
+            <th style="-ms-writing-mode : lr-tb; writing-mode : horizontal-tb; white-space : nowrap;"><%= f.label :address,"住所" %></th>
+            <th style="-ms-writing-mode : lr-tb; writing-mode : horizontal-tb; white-space : nowrap;"><%= f.label :telephone_number,"電話番号" %></th>
+            <th style="-ms-writing-mode : lr-tb; writing-mode : horizontal-tb; white-space : nowrap;"><%= f.label :email,"メールアドレス" %></th>
+          </thead>
+          <tbody class="col-9">
+            <td style="-ms-writing-mode : lr-tb; writing-mode : horizontal-tb; white-space : nowrap;">
+              <%= f.text_field :last_name ,placeholder: "姓", :size=>"25" %>
+              &emsp;&emsp;
+              <%= f.text_field :first_name,placeholder: "名", :size=>"25" %>
+            </td>
+            <td style="-ms-writing-mode : lr-tb; writing-mode : horizontal-tb; white-space : nowrap;">
+              <%= f.text_field :last_name_kana,placeholder: "セイ", :size=>"25" %>
+              &emsp;&emsp;
+              <%= f.text_field :first_name_kana,placeholder: "メイ", :size=>"25" %>
+            </td>
+            <td style="-ms-writing-mode : lr-tb; writing-mode : horizontal-tb; white-space : nowrap;">
+              <%= f.text_field :postal_code,placeholder: "郵便番号", :size=>"25" %>
+            </td>
+            <td style="-ms-writing-mode : lr-tb; writing-mode : horizontal-tb; white-space : nowrap;">
+              <!--:size=>"〇〇"でtext_fieldの大きさを調整している-->
+              <%= f.text_field :address,placeholder: "住所", :size=>"50" %>
+            </td>
+            <td style="-ms-writing-mode : lr-tb; writing-mode : horizontal-tb; white-space : nowrap;">
+              <%= f.text_field :telephone_number,placeholder: "電話番号", :size=>"25" %>
+            </td>
+            <td style="-ms-writing-mode : lr-tb; writing-mode : horizontal-tb; white-space : nowrap;">
+              <%= f.text_field :email,placeholder: "メールアドレス", :size=>"25" %>
+            </td>
+          </tbody>
+        </table>
+        <div class ="col mt-5 d-flex justify-content-center">
+          <%= f.submit "編集内容を保存",class:'btn btn-success' %>
+          &emsp;&emsp;
+          <%= link_to "退会する",public_unsubscribe_path,class:'btn btn-md btn-danger' %>
+        </div>
+      <% end %>
+    </div>
   </div>
 </div>
