--- a/app/views/public/orders/confirm.html.erb
+++ b/app/views/public/orders/confirm.html.erb
@@ -38,9 +38,8 @@
             </table>
         </div>
     </div>
-
     <div class ="row">
-        <div class="col-11 offset-1">
+        <div class="col-11">
             <table class ="table table-borderless">
                 <tr>
                     <th class ="col-1">支払方法</th><br>
