--- a/app/views/public/orders/index.html.erb
+++ b/app/views/public/orders/index.html.erb
@@ -3,7 +3,7 @@
     <h5 class="bg-light">注文履歴一覧</h5>
   </div>
   <div class="row">
-    <table class="table table-bordered border-bg" style="margin:20px">
+    <table class="table table-bordered border-dark" style="margin:20px">
       <thead class="bg-light">
         <th>注文日</th>
         <th>配送先</th>
@@ -23,7 +23,7 @@
           <% end %>
           </td>
           <!--.to_s(:delimited)で桁区切り表示-->
-          <td><%= order.price.to_s(:delimited) %></td>
+          <td><%= order.price.to_s(:delimited) %>円</td>
           <!--_i18nステータスのenumを日本語化させる記述-->
           <td><%= order.status_i18n %></td>
           <td><%= link_to "表示する",public_order_path(order.id),class:"btn btn-sm btn-primary" %></td>
