--- a/app/views/public/cart_items/index.html.erb
+++ b/app/views/public/cart_items/index.html.erb
@@ -1,8 +1,8 @@
 <div class ="container" style ="margin:50px">
     <div class ="row">
-        <h5 class ="col-3 text-left bg-light">ショッピングカート</h5>
+        <h5 class ="col-3 text-center bg-light">ショッピングカート</h5>
         <div class ="col-9 text-right">
-            <%= link_to "カートを空にする",public_destroy_all_path, method: :delete, "data-confirm" => "本当に空にしますか？" ,class:'btn btn-md btn-danger' %>
+            <%= link_to "カートを空にする",public_destroy_all_path, method: :delete, "data-confirm" => "本当に空にしますか？" ,class:'btn btn-sm btn-danger' %>
         </div>
     </div>
     <div class ="row" style ="margin-top:20px">
@@ -30,7 +30,7 @@
                     </td>
                     <td><%= cart_item.sum_of_price.to_s(:delimited) %></td>
                     <td>
-                        <%= link_to "削除する" ,public_cart_item_path(cart_item.id), method: :delete, "data-confilm" => "本当にカートから削除しますか？" ,class:'btn btn-md btn-danger' %>
+                        <%= link_to "削除する" ,public_cart_item_path(cart_item.id), method: :delete, "data-confilm" => "本当にカートから削除しますか？" ,class:'btn btn-sm btn-danger' %>
                     </td>
                 </tbody>
                     <!--合計金額を計算-->
@@ -39,7 +39,7 @@
             <% end %>
         </table>
     </div>
-    <div class ="row" style="margin-top:20px">
+    <div class ="row offset-1" style="margin-top:20px">
         <div class ="col-9 text-left">
             <%= link_to "買い物を続ける",root_path,class:'btn btn-sm btn-primary' %>
         </div>
