--- a/app/views/public/orders/new.html.erb
+++ b/app/views/public/orders/new.html.erb
@@ -43,14 +43,30 @@
           <%= f.radio_button :address_number, 2 %>
           <%= f.label :address_number_2, "新しいお届け先" %><br>
           <div style="margin-left:20px">
-            <%= f.label :postal_code, "郵便番号(ハイフンなし)",size: 15 %>
-            <%= f.text_field :postal_code ,placeholder: "0000000" %><br>
-
-            <%= f.label :address, "住所" ,size: 15 %>
-            <%= f.text_field :address ,placeholder: "東京都千代田区千代田１−１",size:50%><br>
-
-            <%= f.label :address_name, "宛名" ,size: 15 %>
-            <%= f.text_field :address_name ,placeholder: "令和成子" %>
+            <table class="table table-borderless" style="-ms-writing-mode: tb-lr;writing-mode: vertical-lr;">
+              <thead style="font-size:15px">
+                <th style="-ms-writing-mode : lr-tb; writing-mode : horizontal-tb; white-space : nowrap;">
+                  <%= f.label :postal_code, "郵便番号(ハイフンなし)",size: 15 %>
+                </th>
+                <th style="-ms-writing-mode : lr-tb; writing-mode : horizontal-tb; white-space : nowrap;">
+                  <%= f.label :address, "住所" ,size: 15 %>
+                </th>
+                <th style="-ms-writing-mode : lr-tb; writing-mode : horizontal-tb; white-space : nowrap;">
+                  <%= f.label :address_name, "宛名" ,size: 15 %>
+                </th>
+              </thead>
+              <tbody>
+                <td style="-ms-writing-mode : lr-tb; writing-mode : horizontal-tb; white-space : nowrap;">
+                  <%= f.text_field :postal_code ,placeholder: "0000000",:size=>"20" %>
+                </td>
+                <td style="-ms-writing-mode : lr-tb; writing-mode : horizontal-tb; white-space : nowrap;">
+                  <%= f.text_field :address ,placeholder: "東京都千代田区千代田１−１",:size=>"50" %>
+                </td>
+                <td style="-ms-writing-mode : lr-tb; writing-mode : horizontal-tb; white-space : nowrap;">
+                  <%= f.text_field :address_name ,placeholder: "令和成子",:size=>"20" %>
+                </td>
+              </tbody>
+            </table>
           </div>
         </div>
       </div>
