--- a/app/views/public/cart_items/index.html.erb
+++ b/app/views/public/cart_items/index.html.erb
@@ -51,6 +51,9 @@
         </div>
     </div>
     <div class ="row mt-5 d-flex justify-content-center">
-        <%= link_to "情報入力に進む",new_public_order_path,class:'btn btn-md btn-success' %>
+        <% if @cart_items.present? %>
+            <%= link_to "情報入力に進む",new_public_order_path,class:'btn btn-md btn-success' %>
+        <% else %>
+        <% end %>
     </div>
 </div>
